# nox-recipes

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  mkdocs.yaml  noxfile.py  pyproject.toml  zensical.toml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.config/linters/: .ruff.toml
.config/mise/conf.d/: 50-python.toml
.config/release-please/: .manifest.json
.github/workflows/: docs.yaml  python-bench.yaml  python-docs.yaml  python-release.yaml  release-pr.yaml  shared-copier-update.yaml  shared-mega-linter.yaml  shared-review.yaml  test.yaml
docs/guide/: README.md
docs/reference/: README.md  cuda.md  pytest.md  uv.md
src/liblaf/nox_recipes/: __init__.py  __init__.pyi  _cuda.py  _pytest.py  _uv.py
tests/: test_cuda.py  test_supports_cuda.py
